# fortune-es

./: Dockerfile  README.md  pyproject.toml
data/: env-example  fortune-mapping.json
elastic/: app.py  es.py  fortune.py  populate.py
