[tool.poetry]
name = "es"
version = "0.1.0"
description = ""
authors = ["Łukasz Bacik <mail@luka.sh>"]
readme = "README.md"
packages = [{include = "elastic"}]

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "~7.13.0"
requests = "^2.32"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
fortune-client = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fes = 'elastic.app:main'
